--- a/index.html
+++ b/index.html
@@ -63,17 +63,15 @@
             <img src="img/jungesteam.svg"></img>
             <h3>Junges Team</h3>
             <p>
-              Wir sind immer für dich da. Du kannst uns jederzeit
-              kostenpflichtig anrufen und dich beraten lassen. <br />Im Leben
-              wird dir nichts geschenkt!
+              Wir sind ein junges Dynamisches Team das sehr dynamisch Dynamisiert :)
+          
             </p>
           </div>
           <div class="feature">
             <img src="img/entwicklung.svg"></img>
             <h3>Entwicklungsphase</h3>
             <p>
-              Mit unserer Dino-Zertifizierung kannst du dir sicher sein, dass
-              vom Zelt bis zum Lastwagen alles einen Platz findet.
+             Wir sind noch in der Enticklungsphase und ja toller dummy Text
             </p>
           </div>
           <div class="feature">
